unpackaged/main/default/objects/Entrega__c/Entrega__c.object-meta.xml
<CustomObject>
    <label>Entrega</label>
    <nameField>
        <label>Nombre de Entrega</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entregas</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>