unpackaged/main/default/objects/Entrega__c/fields/Acabadosexteriores__c.field-meta.xml
<CustomField>
    <fullName>Acabadosexteriores__c</fullName>
    <label>Acabados exteriores</label>
    <type>TextArea</type>
</CustomField>