unpackaged/main/default/objects/Entrega__c/fields/Acabadosinteriores__c.field-meta.xml
<CustomField>
    <fullName>Acabadosinteriores__c</fullName>
    <label>Acabados interiores</label>
    <type>TextArea</type>
</CustomField>