unpackaged/main/default/objects/Entrega__c/fields/Acepto_aviso_de_privacidad__c.field-meta.xml
<CustomField>
    <fullName>Acepto_aviso_de_privacidad__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Acepto aviso de privacidad</description>
    <label>Acepto aviso de privacidad</label>
    <type>Checkbox</type>
</CustomField>