unpackaged/main/default/objects/Entrega__c/fields/ControlE__c.field-meta.xml
<CustomField>
    <fullName>ControlE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ControlE</label>
    <type>Checkbox</type>
</CustomField>