unpackaged/main/default/objects/Entrega__c/fields/DescripcionPaquete__c.field-meta.xml
<CustomField>
    <fullName>DescripcionPaquete__c</fullName>
    <label>Descripción Paquete</label>
    <length>255</length>
    <type>Text</type>
</CustomField>