unpackaged/main/default/objects/Entrega__c/fields/Detalledebitacorade_entrega__c.field-meta.xml
<CustomField>
    <fullName>Detalledebitacorade_entrega__c</fullName>
    <label>Detalle de bitácora de entrega</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No visita</fullName>
            </value>
            <value>
                <fullName>Estatus</fullName>
            </value>
            <value>
                <fullName>Fecha</fullName>
            </value>
            <value>
                <fullName>Hora</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>