unpackaged/main/default/objects/Entrega__c/fields/EntrgaActas__c.field-meta.xml
<CustomField>
    <fullName>EntrgaActas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EntrgaActas</label>
    <type>Checkbox</type>
</CustomField>