unpackaged/main/default/objects/Entrega__c/fields/Estructural__c.field-meta.xml
<CustomField>
    <fullName>Estructural__c</fullName>
    <label>Estructural</label>
    <type>TextArea</type>
</CustomField>