unpackaged/main/default/objects/Entrega__c/fields/FechaEntrega__c.field-meta.xml
<CustomField>
    <fullName>FechaEntrega__c</fullName>
    <label>Fecha de Entrega</label>
    <type>Date</type>
</CustomField>