unpackaged/main/default/objects/Entrega__c/fields/FechaSolicitudPaquete__c.field-meta.xml
<CustomField>
    <fullName>FechaSolicitudPaquete__c</fullName>
    <label>Fecha Solicitud Paquete</label>
    <type>Date</type>
</CustomField>