unpackaged/main/default/objects/Entrega__c/fields/Hidrosanitaria__c.field-meta.xml
<CustomField>
    <fullName>Hidrosanitaria__c</fullName>
    <label>Hidrosanitaria</label>
    <type>TextArea</type>
</CustomField>