unpackaged/main/default/objects/Entrega__c/fields/Instalacioneselectricas__c.field-meta.xml
<CustomField>
    <fullName>Instalacioneselectricas__c</fullName>
    <label>Instalaciones eléctricas</label>
    <type>TextArea</type>
</CustomField>