unpackaged/main/default/objects/Entrega__c/fields/Inventario__c.field-meta.xml
<CustomField>
    <fullName>Inventario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventario</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Inventario__c.Cuenta__c</field>
            <operation>equals</operation>
            <valueField>$Source.Cuenta__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.Estatus__c</field>
            <operation>equals</operation>
            <value>Cancelado</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Inventario__c</referenceTo>
    <relationshipLabel>Entregas</relationshipLabel>
    <relationshipName>Entregas</relationshipName>
    <type>Lookup</type>
</CustomField>