unpackaged/main/default/objects/Entrega__c/fields/Mejora__c.field-meta.xml
<CustomField>
    <fullName>Mejora__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mejora</label>
    <type>Checkbox</type>
</CustomField>