unpackaged/main/default/objects/Entrega__c/fields/Motivodenoentrega__c.field-meta.xml
<CustomField>
    <fullName>Motivodenoentrega__c</fullName>
    <label>Motivo de no entrega</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cambio fecha y hora</fullName>
            </value>
            <value>
                <fullName>No asistió</fullName>
            </value>
            <value>
                <fullName>Detalles de calidad</fullName>
            </value>
            <value>
                <fullName>Está de viaje</fullName>
            </value>
            <value>
                <fullName>Falta documento</fullName>
            </value>
            <value>
                <fullName>No es la ubicación</fullName>
            </value>
            <value>
                <fullName>No es lo que ofrecieron</fullName>
            </value>
            <value>
                <fullName>No quiere la casa</fullName>
            </value>
            <value>
                <fullName>No se localiza</fullName>
            </value>
            <value>
                <fullName>Notario</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
            <value>
                <fullName>Demanda detalles de calidad</fullName>
                <isActive>false</isActive>
                <label>Demanda</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>