unpackaged/main/default/objects/Entrega__c/fields/NoCliente__c.field-meta.xml
<CustomField>
    <fullName>NoCliente__c</fullName>
    <formula>Cuenta__r.Numerodecliente__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No. Cliente</label>
    <type>Text</type>
</CustomField>