unpackaged/main/default/objects/Entrega__c/fields/Numero_Proceso__c.field-meta.xml
<CustomField>
    <fullName>Numero_Proceso__c</fullName>
    <formula>MID(Name, FIND(&quot;_&quot;, Name)+ 1, LEN(Name) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Proceso</label>
    <type>Text</type>
</CustomField>