unpackaged/main/default/objects/Entrega__c/fields/NumeroCliente__c.field-meta.xml
<CustomField>
    <fullName>NumeroCliente__c</fullName>
    <label>Numero de cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>