unpackaged/main/default/objects/Entrega__c/fields/Paquete__c.field-meta.xml
<CustomField>
    <fullName>Paquete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paquete</label>
    <type>Checkbox</type>
</CustomField>