unpackaged/main/default/objects/Entrega__c/fields/PaqueteEntregado__c.field-meta.xml
<CustomField>
    <fullName>PaqueteEntregado__c</fullName>
    <label>Paquete Entregado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>