unpackaged/main/default/objects/Entrega__c/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Producto</label>
    <type>Checkbox</type>
</CustomField>