unpackaged/main/default/objects/Entrega__c/fields/ReferenciaBancariaCliente__c.field-meta.xml
<CustomField>
    <fullName>ReferenciaBancariaCliente__c</fullName>
    <formula>Cuenta__r.ReferenciaBancariaCliente__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referencia Bancaria del Cliente</label>
    <type>Text</type>
</CustomField>