unpackaged/main/default/objects/Entrega__c/fields/Vidrieria__c.field-meta.xml
<CustomField>
    <fullName>Vidrieria__c</fullName>
    <label>Vidriería</label>
    <type>TextArea</type>
</CustomField>