unpackaged/main/default/objects/Entrega__c/validationRules/No_modificar_inventario.validationRule-meta.xml
<ValidationRule>
    <fullName>No_modificar_inventario</fullName>
    <active>true</active>
    <errorConditionFormula>IF($Profile.Id &lt;&gt; &quot;00eo0000000vwpl&quot;&amp;&amp; NOT(ISBLANK(   Inventario__c )), (ISCHANGED(Inventario__c )) ,null)</errorConditionFormula>
    <errorMessage>No es posible modificar el inventario asignado favor de contactar a su administrador.</errorMessage>
</ValidationRule>