unpackaged/main/default/objects/Entrega__c/validationRules/No_modificar_nombre_de_entrega.validationRule-meta.xml
<ValidationRule>
    <fullName>No_modificar_nombre_de_entrega</fullName>
    <active>true</active>
    <errorConditionFormula>IF(  $Profile.Id  &lt;&gt; &quot;00eo0000000vwpl&quot;&amp;&amp;NOT(ISBLANK( Name )), (ISCHANGED(Name)) ,null)</errorConditionFormula>
    <errorMessage>No es posible modificar el Nombre de la Entrega.</errorMessage>
</ValidationRule>