unpackaged/main/default/objects/Entrega__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Estatus__c</columns>
    <columns>Inventario__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Estatus__c</field>
        <operation>equals</operation>
        <value>Entregado</value>
    </filters>
    <label>Todos</label>
</ListView>