unpackaged/main/default/objects/Entrega__c/listViews/MisEntregas.listView-meta.xml
<ListView>
    <fullName>MisEntregas</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>Mis Entregas</label>
</ListView>